upd: key management.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,14 @@
 cmake_minimum_required(VERSION 3.10)
 project(burro)
 
-add_executable(burro main.c)
+set(SRC
+  src/key.h
+  src/key.c
+  
+  src/burro.c
+)
+
+add_executable(burro ${SRC})
 
 target_link_libraries(burro unistring)
 
